cargo-features = ["edition2024"]


[package]
name = "hello_solana"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "2.1.14"
solana-client = "2.2.0"
solana-sdk = "2.2.1"
tokio = "=1.43.0"

[[example]]
name = "client"
path = "examples/client.rs"
